# CDP2p0

./: .gitignore  CDP2p0_GUI.py  README.md  cdp2p0.py  cdp2p0.spec  cdp2p0_gui.db  cdp2p0_v1.0.0.py  gui.py  gui_v1.0.0.py  ipconfig_all_output.txt  requirements.txt  script-combined-tc-imaging.py  script-combined-tc-imaging_threading-alex.py  script-combined-tc-imaging_threading-originalHASPROBLEMS.py  script-combined-tc-imaging_threading.py  script-combo-test.py  script-tc-2.py  script-tc-4.py  script-tc-ICP4.py  script-tc-ajitha.py  script-tc-asc-microwell.py  script-tc-asc-microwell2.py  script-tc-asc-microwell_imaging.py  script-tc-christina.py  script-tc-rerun.py  script-tc.py  script.py  script2.py  script_FF_ddPCR.py  server_start.py  setup.py  test_moving_and_liquid_handling.py  unit_B.db  voxel_expansion.py
AppData/: README  new_sample_Rack.csv  shifted_unit_A_upper_gantry_coordinates.csv  unit_A.db  unit_A_upper_gantry_coordinates.bak  unit_A_upper_gantry_coordinates.csv  unit_A_voxels.csv  unit_A_voxels.json  unit_C.db  (+8 more)
chassis_controller/: README.md  pyproject.toml
chassis_controller/app/: main.py
chassis_controller/app/config/: BRADx_config.py
chassis_controller/app/routers/: chassis_submodule.py  hardware_interface.py  pipettor_gantry_submodule.py  pipettor_gantry_submodule.py.bak  prep_deck_submodule.py  prep_deck_submodule.py.bak  reader_submodule.py
chassis_controller/app/routers/interfaces/: BRADxBus.py  MeerstetterBus.py  PipettorBus.py  utils.py  utils_meerstetter.py
chassis_controller/app/tests/: test_meerstetter_utils.py  test_utils.py
(+7010 files in other folders)
